--- a/PostWrap/PWTextInputTableViewCell.xib
+++ b/PostWrap/PWTextInputTableViewCell.xib
@@ -1,61 +1,46 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="250" id="KGk-i7-Jjw" customClass="PWTextInputTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="427" height="200"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="KGk-i7-Jjw" customClass="PWTextInputTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="427" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="427" height="199.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="427" height="69.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Camera_icon" translatesAutoresizingMaskIntoConstraints="NO" id="rR3-2D-zPC">
-                        <rect key="frame" x="325" y="55" width="86" height="90"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="90" id="QPN-Xf-CaV"/>
-                            <constraint firstAttribute="width" constant="86" id="Zil-75-pyk"/>
-                        </constraints>
-                    </imageView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter your text here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fe0-zc-6j1">
-                        <rect key="frame" x="22" y="38" width="278" height="123.5"/>
-                        <color key="backgroundColor" red="0.14901961389999999" green="0.7254902124" blue="0.35686275360000003" alpha="1" colorSpace="deviceRGB"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <rect key="frame" x="8" y="8" width="411" height="53.5"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                        <connections>
-                            <outlet property="delegate" destination="-1" id="JuB-pZ-3pu"/>
-                        </connections>
                     </textView>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="rR3-2D-zPC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="5tE-SD-f0o"/>
-                    <constraint firstItem="rR3-2D-zPC" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="GuP-PK-Wvw"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="rR3-2D-zPC" secondAttribute="trailing" constant="8" id="KX2-gj-vb2"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="fe0-zc-6j1" secondAttribute="bottom" id="62c-dV-OuF"/>
                     <constraint firstAttribute="bottomMargin" secondItem="fe0-zc-6j1" secondAttribute="bottom" constant="53" id="MLX-fz-rvM"/>
-                    <constraint firstItem="rR3-2D-zPC" firstAttribute="leading" secondItem="fe0-zc-6j1" secondAttribute="trailing" constant="25" id="a0h-fL-U5x"/>
-                    <constraint firstItem="fe0-zc-6j1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="30" id="dd1-TY-Ksj"/>
-                    <constraint firstItem="fe0-zc-6j1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="14" id="h3T-69-feI"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="fe0-zc-6j1" secondAttribute="trailing" id="Wx5-fw-qnw"/>
+                    <constraint firstItem="fe0-zc-6j1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="dd1-TY-Ksj"/>
+                    <constraint firstItem="fe0-zc-6j1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="h3T-69-feI"/>
                     <constraint firstItem="fe0-zc-6j1" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="pPN-qz-2vN"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="MLX-fz-rvM"/>
-                        <exclude reference="5tE-SD-f0o"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="previewImageView" destination="rR3-2D-zPC" id="aAb-hp-FQC"/>
+                <outlet property="inputTextView" destination="fe0-zc-6j1" id="6FW-Bk-4Co"/>
             </connections>
-            <point key="canvasLocation" x="301.5" y="278"/>
+            <point key="canvasLocation" x="301.5" y="271"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="Camera_icon" width="123" height="120"/>
-    </resources>
 </document>
